--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>189781709351-2fgub7ut4f44e7seqvdgaebid05e8mgd.apps.googleusercontent.com</string>
+	<string>130845731368-129984r2159osikdeba3u9290pu9qh61.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.189781709351-2fgub7ut4f44e7seqvdgaebid05e8mgd</string>
+	<string>com.googleusercontent.apps.130845731368-129984r2159osikdeba3u9290pu9qh61</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>130845731368-4tvr0nl6ilotke9dvq9okljc0l9fd011.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC_4qm52Vkak1c_a-WucmgTY1GLhQvIp-g</string>
+	<string>AIzaSyDHUUD38_r0vgJUzTWc7RKyaAlkb8dkya0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>189781709351</string>
+	<string>130845731368</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.moneyAssistant2608</string>
 	<key>PROJECT_ID</key>
-	<string>mmas-moneytracker</string>
+	<string>fruit-ninja-bfc40</string>
 	<key>STORAGE_BUCKET</key>
-	<string>mmas-moneytracker.appspot.com</string>
+	<string>fruit-ninja-bfc40.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:189781709351:ios:53aeb605dc2b087285b402</string>
+	<string>1:130845731368:ios:e90e114ecc1637e89fa31d</string>
 </dict>
 </plist>
