--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,47 +29,47 @@ dependencies:
   #  cloud_firestore: ^0.16.0+1
   #  syncfusion_flutter_datepicker: ^19.2.62
   #  flutter_spinkit: ^5.1.0
-  google_sign_in: ^5.2.0
-  firebase_auth: ^3.1.4
-  firebase_core: ^1.8.0
+  google_sign_in: ^7.0.0
+  firebase_auth: ^5.5.4
+  firebase_core: ^3.13.1
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
-  intl: ^0.17.0
-  provider: ^5.0.0
+  intl: ^0.19.0
+  provider: ^6.1.5
   flutter_screenutil: ^5.0.0+2
-  flutter_login: ^2.2.1
-  flutter_screen_lock: ^4.0.4+2
-  flutter_app_lock: ^2.0.0
-  google_fonts: ^2.1.0
+  flutter_login: ^5.0.0
+  flutter_screen_lock: ^9.2.1+1
+  flutter_app_lock: ^4.2.0+2
+  google_fonts: ^6.2.1
   table_calendar: ^3.0.2
-  syncfusion_flutter_charts: ^20.4.54
+  syncfusion_flutter_charts: ^29.2.9
   day_night_time_picker: ^1.0.3+1
   flutter_material_pickers: ^3.1.0
   sliding_up_panel: ^2.0.0+1
-  keyboard_actions: ^3.4.4
+  keyboard_actions: ^4.2.0
   fluttertoast: ^8.2.1
   flutter_swipe_action_cell: ^3.1.0
-  share_plus: ^2.1.4
+  share_plus: ^11.0.0
   in_app_review: ^2.0.3
-  rate_my_app: ^1.1.1
+  rate_my_app: ^2.3.1
 #  local_auth: ^1.1.8
 
   # icons
-  material_design_icons_flutter: ^4.0.5955
-  font_awesome_flutter: ^9.1.0
-  outline_material_icons: ^0.1.1
+  material_design_icons_flutter: ^7.0.7296
+  font_awesome_flutter: ^10.8.0
+  outline_material_icons: ^1.0.0
   flutter_boxicons: ^3.0.0
   icofont_flutter: ^1.4.0
 
   cupertino_icons: ^1.0.3
 
 dependency_overrides:
-  flutter_colorpicker: ^0.6.0
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_native_splash: ^1.2.3
+  flutter_native_splash: ^2.4.6
 
 flutter_native_splash:
   color: "#ffffff"
