--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.jvmargs=-Xmx4096m
+storeFile=../app/my-release-key.jks
+storePassword=your_store_password
+keyAlias=your_key_alias
+keyPassword=your_key_password
